# ChangeLog for dev-python/pyorbit
# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/pyorbit/ChangeLog,v 1.58 2008/10/27 10:29:01 hawking Exp $

  27 Oct 2008; Ali Polatel <hawking@gentoo.org> pyorbit-2.14.3.ebuild:
  Use python_need_rebuild.

  29 May 2008; Ali Polatel <hawking@gentoo.org> pyorbit-2.14.3.ebuild:
  Made the ebuild multilib-safe.

  22 Sep 2007; Tom Gall <tgall@gentoo.org> pyorbit-2.14.3.ebuild:
  stable on ppc64

  07 Sep 2007; Jeroen Roovers <jer@gentoo.org> pyorbit-2.14.3.ebuild:
  Stable for HPPA too.

  11 Aug 2007; Andrej Kacian <ticho@gentoo.org> pyorbit-2.14.3.ebuild:
  Stable on x86, bug #185823.

  10 Aug 2007; Christoph Mende <angelos@gentoo.org> pyorbit-2.14.3.ebuild:
  Stable on amd64 wrt bug #185823

  08 Aug 2007; Raúl Porcel <armin76@gentoo.org> pyorbit-2.14.3.ebuild:
  alpha/ia64 stable wrt #185823

  07 Aug 2007; Tobias Scherbaum <dertobi123@gentoo.org>
  pyorbit-2.14.3.ebuild:
  Stable on ppc wrt bug #185823.

  07 Aug 2007; Gustavo Zacarias <gustavoz@gentoo.org> pyorbit-2.14.3.ebuild:
  Stable on sparc wrt #185823

  19 Jul 2007; Roy Marples <uberlord@gentoo.org> pyorbit-2.14.3.ebuild:
  true isn't always in /bin

*pyorbit-2.14.3 (30 Jun 2007)

  30 Jun 2007; Mart Raudsepp <leio@gentoo.org> -pyorbit-2.0.1.ebuild,
  -pyorbit-2.14.0.ebuild, +pyorbit-2.14.3.ebuild:
  Version bump

  07 May 2007; Roy Marples <uberlord@gentoo.org> pyorbit-2.14.1.ebuild,
  pyorbit-2.14.2.ebuild:
  Added ~x86-fbsd keyword, #148018.

*pyorbit-2.14.2 (28 Mar 2007)

  28 Mar 2007; Daniel Gryniewicz <dang@gentoo.org> +pyorbit-2.14.2.ebuild:
  Bump to 2.14.2
          - Fix build problem on gentoo
          - Fix a couple of bugs uncovered by Coverity

  21 Jan 2007; Bryan Østergaard <kloeri@gentoo.org> pyorbit-2.14.1.ebuild:
  Stable on IA64, bug 156662.

  20 Jan 2007; Jeroen Roovers <jer@gentoo.org> pyorbit-2.14.1.ebuild:
  Stable for HPPA (bug #156662).
