@@ -1,4 +1,6 @@
 DIST pyorbit-2.14.3.tar.bz2 284374 RMD160 a25c396815c17449030d289e8e3d20ec8e1e21bb SHA1 b0863aba35beddaf44722b0d7a3d1f65081e424a SHA256 a3517e0ddaf23508f99e7489a23e3462f86c528ea24bce432e832a78ee4149db
+DIST pyorbit-2.24.0.tar.bz2 293054 RMD160 55aa1c3ac0739d398d8e9bbda93ef36f7c659360 SHA1 f9877ce9672ed3c3d001b86924f1b6514a79efc9 SHA256 8754669b8220aa1f151b920360029d5ea28c42bec55769059676725fe28397b8
 EBUILD pyorbit-2.14.3.ebuild 1271 RMD160 92385bc6176bef6bb72ae60d2a3369d7eb273209 SHA1 4ed423c38727dacf94196346c2de5689ecafa65f SHA256 c2feeca6a1f841ceacbe77dbe0c515cefbb3bd9d129f74cf46eb6b6e66c9f106
-MISC ChangeLog 6454 RMD160 eb50a95761397ae2795234101ebeaad70ceeef3c SHA1 056b6138c653aa10f9245997bdd84f3df1ba8b6a SHA256 9d77efe7ebb12bd9abbb206953c2aaf43e91fa62783885475f0c5d57af0bcbe2
+EBUILD pyorbit-2.24.0.ebuild 1245 RMD160 cac7de564ef6cfabd365c6cedb48883c748a9856 SHA1 40461ccf7239cb7d2e4d4b68c7100ef3486017b2 SHA256 2bf8356415331ef6a9f704d917f1427a65e385a0caf4995a036838bf32ef8114
+MISC ChangeLog 6589 RMD160 94443793f54f6ba1d6c7353264318a6b179e430d SHA1 cc4cb247c13f10a433591ad009a665ce5e6ce324 SHA256 4e26854656eebf472a7f34ee70fbca08321b845240386d7485fb3ebb42f10a3d
 MISC metadata.xml 178 RMD160 52828e1ca616ad731f2ab1ed2890d6d3a7cc8043 SHA1 a42d68a6c263ea8d8cbb678548e209aa9642a74e SHA256 aeea09173ed30175422e4f951e369e1882919be3d56e655468e5d4bffea0fc3c
