@@ -1,6 +1,12 @@
 # ChangeLog for dev-python/pyorbit
-# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/pyorbit/ChangeLog,v 1.58 2008/10/27 10:29:01 hawking Exp $
+# Copyright 2002-2009 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-python/pyorbit/ChangeLog,v 1.59 2009/02/18 23:30:29 eva Exp $
+
+*pyorbit-2.24.0 (18 Feb 2009)
+
+  18 Feb 2009; Gilles Dartiguelongue <eva@gentoo.org>
+  +pyorbit-2.24.0.ebuild:
+  Bump to 2.24. Bug fixes.
 
   27 Oct 2008; Ali Polatel <hawking@gentoo.org> pyorbit-2.14.3.ebuild:
   Use python_need_rebuild.
